/*
 * Copyright 2019 Hayo van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package bobsknobshop.messaging.v1;

import "google/api/annotations.proto";

import "bobsknobshop/feedbacks/v1/objects.proto";

option java_multiple_files = true;
option java_package = "gl.bobsknobshop.complaints.v1";
option go_package = "github.com/HayoVanLoon/protoworkflow-genproto/bobsknobshop/complaints/v1;complaints";


// A service acting as a hub for messaging workflows.
service Feedbacks {

    // Retrieves an open complaint.
    // The message status will be set to IN_PROCESS.
    rpc GetFeedback(GetFeedbackRequest) returns (Feedback) {
    }
}


message GetFeedbackRequest {
}
